syntax = "proto3";

// import public "google/protobuf/timestamp.proto"; 
package SrvUsersGroup;

service SrvUsersGroup {
	// 添回用户组
	rpc Add(AddRequest) returns (AddResponse) {}
	// 获取用户组列表
	rpc GetList(GetListRequest) returns (GetListResponse) {}
	// 获取单个用户组
	rpc Get(GetRequest) returns (GetResponse) {}
	// 修改用户组信息
	rpc Update(UpdateRequest) returns (UpdateResponse) {}
	// 批量删除用户组
	rpc BatchDelete(DeleteRequest) returns (DeleteResponse) {}
}


message UsersGroup {
	int64 Id = 1;
	// 用户组名称
	string Name = 2;
	// 所属组Id
	int64 ParentId = 3;
	// 排序
	int64 Sorts = 4;
	// 备注
	string Note = 5;
	// 创建时间
	int64 CreateTime = 6;
	// 最后是错新时间
	int64 LastUpdateTime = 7;
}

message AddRequest {
	UsersGroup Model = 1;
}

message AddResponse {
	int64 NewId = 1;
}

message GetListRequest{
	int64 PageSize = 1;
	int64 CurrentPageIndex = 2;
	string OrderBy = 3;
}

message GetListResponse{
	int64 TotalCount = 1;
	repeated UsersGroup List = 2;
}

message GetRequest {
	int64 Id = 1;
}

message GetResponse {
	UsersGroup Model = 1;
}

message UpdateRequest {
	UsersGroup Model = 1;
}

message UpdateResponse {
	// 是否更新成功
	int64 Updated = 1;
}

message DeleteRequest {
	repeated string IdArray = 1;
}

message DeleteResponse {
	// 是否删除成功,批量删除不需要返回值
	int64 Deleted = 1;
}
